test/files/neg/cofor.check
cofor.scala:54: error: ')' expected but '@' found.
  val result : StreamZipper[Person] => (Person, Boolean, Int) = cofor (p @ Person(_, age)) {
                                                                         ^
cofor.scala:54: error: ';' expected but ')' found.
  val result : StreamZipper[Person] => (Person, Boolean, Int) = cofor (p @ Person(_, age)) {
                                                                                         ^
two errors found
